# 3D_generate_project

./: .gitignore  .gitmodules  README.md  environment.yml  gen.py  main.py  preprocess.py  pyproject.toml  train.py  zero123_utils.py
guidance/: zero123_utils.py
pretrained/: sd-objaverse-finetune-c_concat-256.yaml
render/: camera.py  gaussian_renderer.py
utils/: camera_utils.py  image_utils.py  loss_utils.py
