[project]
name = "3d-generate-project"
version = "0.1.0"
description = ""
authors = [
    {name = "fumo2024", email = "atrida@foxmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.1,<3.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "carvekit>=4.1.2,<5.0.0",
    "torchvision (>=0.22.1,<0.23.0)"
]

[tool.poetry]
package-mode = false
packages = [
    { include = "diff_gaussian_rasterization", from = "modules" },
]

[tool.poetry.dependencies]
diff_gaussian_rasterization = { path = "submodules/diff_gaussian_rasterization" }   

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
